[iOS] Change the doodle top margin calculation

This CL changes the way the top margin of the doodle is computed when
the fullscreen flags are enabled and the NTP isn't contained directly
in BVC. It uses the StatusBarHeight() instead of the passed topMargin
which is wrong on cold start.

Bug: 902259
Test: M71 fix, test all types of new tab animation and ntp layout.
Change-Id: I33af04db418664c6fd033477329353d645379f4c
Reviewed-on: https://chromium-review.googlesource.com/c/1337498
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609737}
Former-commit-id: d480d852d012ef72817eeae8165c6c472a6e9285