ios/chrome/browser/ui/util/ui_util.mm
@@ -81,7 +81,8 @@ bool IsWKWebViewSnapshotsEnabled() {
 CGFloat StatusBarHeight() {
   if (base::FeatureList::IsEnabled(
           web::features::kBrowserContainerFullscreen) &&
-      base::FeatureList::IsEnabled(web::features::kOutOfWebFullscreen)) {
+      base::FeatureList::IsEnabled(web::features::kOutOfWebFullscreen) &&
+      base::FeatureList::IsEnabled(kBrowserContainerContainsNTP)) {
     DCHECK(!base::ios::IsRunningOnIOS11OrLater());
   }
 
